public/css/elements/gallery.sass
.gallery
  clear: both
  overflow: hidden
  background: green
  p, a
    +sm
      color: $colorWhite
  h2
    font-family: $fontSerif
    font-size: 2rem !important
  .gallery__image
    position: relative
    padding-bottom: 48.2%
    height: 0px
    &:after
      background-image: linear-gradient(0deg, rgba(0,15,20,0.6) 15%,rgba(0,15,20,0.15) 52%,rgba(0,15,20,0) 70%)
      display: block
      content: " "
      height: 240px
      width: 100%
      position: absolute
      bottom: 0px
    img
      width: 100%
  .gallery__strip
    font-family: $fontSansSerif
    font-size: 1.7rem
    font-weight: 700
    color: $colorWhite
    position: absolute
    text-transform: uppercase
    background: $colorTheme
    padding: 4px 18px
    top: 20px
    right: 20px
    
  .gallery__text
    +sm
      position: absolute
      left: 55px
      right: 35px
      bottom: 30px
      text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5)
  .gallery__headline
    font-size: 3.2rem
    font-weight: 900
    margin: 12px 0px
  &__breakingNews
    .gallery__headline
      font-size: 3.4rem

